# covid_lit_contra_claims

./: .gitignore  .travis.yml  LICENSE  README.rst  generic.sh  run_file_gpu.sh  setup.cfg  setup.py  tox.ini
notebooks/: ImplementingBenchmarks.ipynb  Main Analysis Notebook.ipynb  SherlockTestingNB.ipynb  Visualize.ipynb
src/covid_lit_contra_claims/: __init__.py  __main__.py  cli.py
src/covid_lit_contra_claims/data/: CreateDataset.py  CreateDatasetUtilities.py  DataExperiments.py  DataLoader.py  __init__.py  constants.py
src/covid_lit_contra_claims/evaluation/: Evaluation.py  Visualization.py  VisualizationUtilities.py  __init__.py
src/covid_lit_contra_claims/models/: Training.py  __init__.py
