[metadata]
name = covid_lit_contra_claims
version = 0.0.1-dev
description = A package for finding contradictory claims related to COVID-19 drug treatments in the CORD-19 literature
long_description = file: README.rst

url = https://github.com/dnsosa/covid_lit_contra_claims.git

author = Daniel Sosa
author_email = dnsosa@stanford.edu
maintainer = Daniel Sosa
maintainer_email = dnsosa@stanford.edu

license = MIT
license_file = LICENSE

#  Google "Python Trove Classifiers"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
keywords =
    deep learning
    NLP
    misinformation
    COVID-19
    drugs

[options]
install_requires =
    click
    click-plugins
    datasets
    evaluate
    fse
    # en_core_sci_lg
    #h5py < 3.0.0
    gensim
    keras
    matplotlib
    networkx
    nltk
    numpy
    openpyxl
    pandas
    pyarrow
    scikit-learn
    seaborn
    sphinx
    torch
    transformers
    spacy
    wandb
    wget

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where's the code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    numpy
    pandas
    sklearn
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click
testing =
    pytest

[options.entry_points]
console_scripts =
    covid_lit_contra_claims = covid_lit_contra_claims.cli:main

# Doc8 Config
[doc8]
max-line-length = 120

# Flake8 Config
[flake8]
ignore = T201, N806, N803, N802, S106, S403, S301, S405
max-line-length = 120
exclude =
    src/covid_lit_contra_claims/evaluation/nli*
    src/covid_lit_contra_claims/cs224u/*

# Coverage config
[coverage:run]
branch = True
source = covid_lit_contra_claims
omit =
    src/covid_lit_contra_claims/__main__.py
    src/covid_lit_contra_claims/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/covid_lit_contra_claims
    .tox/*/lib/python*/site-packages/covid_lit_contra_claims

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
